test/good/typetest14.fsf
type option[T] = None | Some(v:T)
