test/bad/21_3_spectest_bad.fsf
type bad4[T] = Bad4
